# thoughtlab

./: .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  AI_INTEGRATION_QUICKREF.md  BACKEND_SETUP.md  CHANGELOG.md  CLAUDE.md  DEPENDENCY_SUMMARY.md  DEVELOPMENT_GUIDE.md  Dockerfile.dev  FRONTEND_SETUP.md  QUICKSTART_AGENT.md  README.md  README_SCIENCE.md  SCRIPTS.md  SECURITY.md  SETUP.md  TESTING.md  UV_SETUP.md  claude_desktop_config.example.json  docker-compose.yml  package-lock.json  package.json  railway.toml  restart.ps1  restart.sh  setup.sh  start.ps1  start.sh  stop.ps1  stop.sh  test.sh
backend/: .dockerignore  .env.example  Dockerfile  README_TESTS.md  mcp_server.py  pyproject.toml  railway.toml  requirements.txt  validate_agent.py  validate_mcp.py  validate_tools.py
backend/app/: main.py
backend/app/agents/: __init__.py  agent.py  agent_tools.py  config.py  state.py  tools.py
backend/app/ai/: __init__.py  classifier.py  config.py  embeddings.py  similarity.py  workflow.py
backend/app/core/: config.py
backend/app/db/: neo4j.py  postgres.py  redis.py
backend/app/mcp/: README.md  __init__.py  mcp_tools.py  server.py
backend/app/models/: __init__.py  activity.py  job_models.py  nodes.py  settings.py  tool_models.py
backend/app/science/: __init__.py  calibration.py  (+2 more)
backend/examples/: README.md  agent_demo.py
backend/scripts/: init_neo4j.py
backend/tests/: conftest.py  test_activity_models.py  test_activity_service.py  test_api_activities.py  test_api_nodes.py  test_api_tools.py  test_graph_service.py  test_models.py  test_tool_service.py
(+193 files in other folders)
